--- a/prices.html
+++ b/prices.html
@@ -31,7 +31,8 @@
                     <hr>
                     <p class="price">1200 грн <span>за 1 місяць</span></p>
                     <hr>
-                    <p>Кількість квартир: до 36. <br> За додаткові послуги, що значаться в переліку (за домовленістю)</p>
+                    <p>Кількість квартир: до 36.</p>
+                    <p class="additional-info">Додаткові послуги з переліку "за домовленістю" не входять у мінімальну ціну і мають договірну вартість.</p>
                 </div>
             </div>
             <p class="info-text bottom-text" data-aos="fade-up">
